alignment fixed

--- a/css/global-sec-page.css
+++ b/css/global-sec-page.css
@@ -273,7 +273,8 @@ h2 {
   font-weight: 600;
   line-height: 1.3;
   vertical-align: -webkit-baseline-middle;
-  /*margin-left: 10px;*/
+  padding-left: 20px;
+  width: 250px;
 }
 .nav-inner {
   background-color: #00BFFF;
